typescript/checker/tests/conformance/es6/Symbols/symbolType2.ts.stderr
error: TS2361 {
    span: Span {
        lo: BytePos(
            54,
        ),
        hi: BytePos(
            72,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType2.ts:3:7
  |
3 | "" in Symbol.toPrimitive;
  |       ^^^^^^^^^^^^^^^^^^

